# fmp

./: .gitignore  README.md  pyproject.toml  script.sh  test.sh
fmp/: __main__.py
fmp/data/: __init__.py  sidecar.py  tags.py
fmp/logic/: utils.py  utils_test.py
fmp/scripts/: stat_sidecars.py
fmp/ui/: cons.py  osc.py  osd.py  player.py  preview_thumb.py  progress.py  progress_bar.py  renderer.py  side_panel.py  sidecar.py  tag_dialog.py  tags_panel.py  title_bar.py  util.py
fmp/ui/common/: __init__.py  drawers.py  icon_button.py  qt.py
fmp/ui/editor/: editor.py  timeline.py
