[project]
name = "fmp"
version = "0.1.0"
description = "fans656's media player"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepmerge>=2.0",
    "fans>=0.0.51",
    "mpv>=1.0.7",
    "pyside6>=6.8.2.1",
    "pytz>=2025.1",
    "qtawesome>=1.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
